--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Date of Birth:</label>
-                    <input placeholder="Enter your Date of Birth"type="date" name="dob" id=""[(ngModel)]="dob">
+                    <input placeholder="Enter your Date of Birth"type="date" name="dob" class="form-control"id=""[(ngModel)]="dob">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Phone NO:</label>
@@ -20,15 +20,15 @@
                     <label for="" class="form-label">Place:</label>
                     <input placeholder="Enter your Place"type="text" class="form-control"name="place" [(ngModel)]="place">
                 </div>
-                <div class="col col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Email ID:</label>
                    <input placeholder="Enter your email"type="email" name="emailId" id="" class="form-control"[(ngModel)]="emailId">
                 </div>
-                <div class="col col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Password:</label>
                     <input placeholder="Enter your Password"type="password" name="password" id="" class="form-control"[(ngModel)]="password">
                 </div>
-                <div class="col col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Confirm Password:</label>
                     <input placeholder="Enter your confirm password"type="password" name="" id="" class="form-control">
                 </div>
