--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <div class="d-grid gap-2 col-6 mx-auto">
                         <br>
-                        <button class="btn btn-success" type="button">Login</button>
+                        <button class="btn btn-success" type="button" (click)="readLogin()">Login</button>
                     </div>
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
